force-app/main/default/objects/Brand_Fleet_Rental__c/Brand_Fleet_Rental__c.object-meta.xml
<CustomObject>
    <description>Brand Fleet Rental rental contracts (Argentina) — quotes, reservations, and active rentals.</description>
    <label>Brand Fleet Rental Contract</label>
    <nameField>
        <label>Contract Number</label>
        <displayFormat>KIN-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Fleet Rental Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>