force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Customer account renting the vehicle.</description>
    <inlineHelpText>The customer for this rental.</inlineHelpText>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fleet Rental Contracts</relationshipLabel>
    <relationshipName>Fleet Rental_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>