force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact for the rental (driver / point person).</description>
    <inlineHelpText>The driver / contact responsible for the rental.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fleet Rental Contracts</relationshipLabel>
    <relationshipName>Fleet Rental_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>