force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate__c</fullName>
    <description>Daily rental rate.</description>
    <inlineHelpText>Per-day rental price in ARS.</inlineHelpText>
    <label>Daily Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>