force-app/main/default/objects/Brand_Fleet_Rental__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Rental end date and time (vehicle return).</description>
    <inlineHelpText>When the vehicle is returned.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>