force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type__c</fullName>
    <description>Fuel type for the rental vehicle.</description>
    <inlineHelpText>Engine fuel type for the rental.</inlineHelpText>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nafta</fullName>
                <default>true</default>
                <label>Nafta</label>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>PHEV</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>