force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Origin_Zone__c.field-meta.xml
<CustomField>
    <fullName>Origin_Zone__c</fullName>
    <description>Customer's requested origin / preferred zone — used to recommend nearest fleet station.</description>
    <inlineHelpText>Free-form zone the customer wants near (e.g., "Caballito").</inlineHelpText>
    <label>Origin Zone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>