force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Pickup_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Instructions__c</fullName>
    <description>Specific pickup instructions and dealer notes for the customer.</description>
    <inlineHelpText>Free-text pickup details (parking, hours, contact).</inlineHelpText>
    <label>Pickup Instructions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>