force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Rental_Days__c.field-meta.xml
<CustomField>
    <fullName>Rental_Days__c</fullName>
    <description>Calculated number of rental days from start to end.</description>
    <formula>(DATEVALUE(End_Date__c) - DATEVALUE(Start_Date__c))</formula>
    <inlineHelpText>Total number of rental days.</inlineHelpText>
    <label>Rental Days</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>