force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Rental start date and time.</description>
    <inlineHelpText>When the rental begins.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>