force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Pickup fleet station for this contract.</description>
    <inlineHelpText>Where the customer picks up the vehicle.</inlineHelpText>
    <label>Pickup Station</label>
    <referenceTo>Brand_Fleet_Station__c</referenceTo>
    <relationshipLabel>Fleet Rental Contracts</relationshipLabel>
    <relationshipName>Fleet Rental_Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>