force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Total contracted price for the entire rental period.</description>
    <inlineHelpText>Total for the full rental.</inlineHelpText>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>