force-app/main/default/objects/Brand_Fleet_Rental__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <description>Vehicle model and trim being rented (e.g., "SW4 4x4 7A AT").</description>
    <inlineHelpText>Model selected by the customer.</inlineHelpText>
    <label>Vehicle Model</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>